--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 class="custom-content col s12 m12 l10 wow fadeIn a1"
                 data-wow-delay="0.1s"
               >
-                <h2>Educación</h2>
+                <h2>Education</h2>
 
                 <div
                   class="custom-content-wrapper wow fadeIn a2"
@@ -411,7 +411,7 @@
                 >
                   <h3>
                     Instituto superior Santo Domingo
-                    <span>Analista de sistemas</span>
+                    <span>System analyst</span>
                   </h3>
                   <span>2013 </span>
                   <p></p>
@@ -432,7 +432,7 @@
                 >
                   <h3>
                     Comcal
-                    <span>ASP.net y programación orientada a objectos</span>
+                    <span>ASP.net and Object-oriented programming</span>
                   </h3>
                   <span>2010 </span>
                   <p></p>
@@ -441,7 +441,7 @@
                   class="custom-content-wrapper wow fadeIn a4"
                   data-wow-delay="0.4s"
                 >
-                  <h3>Apse capacitaciones <span>Inglés técnico</span></h3>
+                  <h3>Apse capacitaciones <span>Technical English</span></h3>
                   <span>2009 </span>
                   <p></p>
                 </div>
